--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2018"
 csv = "=1.1.6"
 derive_more = "=0.99.13"
 thiserror = "1.0.24"
+anyhow = "=1.0.40"
+tracing = "=0.1.26"
+tracing-subscriber = "=0.2.18"
 
 [dependencies.serde]
 version = "=1.0.125"
